# color-palette

./: Cargo.toml  README.md
src/: color.rs  main.rs  palette.rs  parser.rs
src/config/: mod.rs  reader.rs
test/: colors  colors-hyprland.conf  colors-kitty.conf  colors-konsole.colorscheme  colors-oomox  colors-putty.reg  colors-rofi-dark.rasi  colors-rofi-light.rasi  colors-rofi-pywal.rasi  colors-speedcrunch.json  colors-sway  colors-tty.sh  colors-wal-dmenu.h  colors-wal-dwm.h  colors-wal-st.h  colors-wal-tabbed.h  colors-wal.vim  colors-wlogout.css  colors.Xresources  colors.css  colors.hs  colors.json  colors.scss  colors.sh  colors.yml  sequences  test.toml  wal
ui/: appwindow.slint
