[package]
name = "color_palette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
config = { version = "0.14.0", features = ["preserve_order", "indexmap"] }
glob = "0.3.1"
num = "0.4.3"
slint = "1.7.2"
toml = { version = "0.8.19", features = ["indexmap", "preserve_order"] }
uuid = { version = "1.10.0", features = ["rng", "v6"] }
winnow = "0.6.18"

[build-dependencies]
slint-build = "1.7.2"
